# bottica

./: .gitignore  .pylintrc  LICENSE  bot.py  bottica.example.service  changelog.md  lint.sh  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  test.json  tox.ini
.github/workflows/: lint.yml
bottica/: __main__.py  bot.py  commands.py  file.py  markdown.py  release.py  response.py  sass.py
bottica/infrastructure/: check.py  cmd.py  command.py  config.py  converters.py  error.py  file.py  friendly_error.py  help.py  persist.py  sticky_message.py  util.py  validators.py
bottica/music/: check.py  cog.py  context.py  download.py  error.py  normalize.py  song.py
bottica/util/: deserializers.py  file.py  fmt.py  persist.py  serializers.py
bottica/version/: __init__.py  changelog.py  migrate.py  old_song.py
src/: bot.py  commands.py  error.py  manage.py  markdown.py  music.py  release.py  report_err.py  response.py  sass.py  song.py  sticky_message.py  util.py  version.py
src/infrastructure/: config.py  converters.py  error.py  friendly_error.py  persist.py  serializers.py  sticky_message.py  util.py  validators.py
src/music/: check.py  cog.py  context.py  download.py  error.py  file.py  normalize.py  song.py
src/version/: __init__.py  changelog.py  migrate.py  old_song.py
tests/: test_persist.py
