[tool.poetry]
name = "bottica"
version = "0.25.1"
description = "A personal music-playing discord bot project."
authors = ["Technomunk <thegriffones@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = { extras = ["voice"], version = "^2.0" }
click = "^8.1"
dataclass-csv = "^1.4"
pepver = "^1.0"
sentry-sdk = "^1.5"
toml = "^0.10"
yt-dlp = "^2022.9"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
mypy = "*"
pylint = "*"
pytest = "^7.1"
types-toml = "^0.10"

[tool.poetry.scripts]
bottica = "bottica.__main__:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
target_version = ["py310"]
